# simple-tpm-pk11

./: .gitignore  .travis.yml  FAQ  Makefile.am  Makefile.in  README  README.md  TPM-TROUBLESHOOTING  bootstrap.sh  config.h.in  configure  configure.ac
check-srk/: check-srk.cc
doc/: Makefile.am  Makefile.in  simple-tpm-pk11.7  simple-tpm-pk11.7.yodl  stpm-exfiltrate.1  stpm-exfiltrate.1.yodl  stpm-keygen.1  stpm-keygen.1.yodl  stpm-sign.1  stpm-sign.1.yodl  stpm-verify.1  stpm-verify.1.yodl
src/: common.cc  common.h  common_test.cc  exfiltrate.cc  fake_tspi.cc  internal.h  keygen.cc  keygen_test.cc  libgtest.cc  pk11.cc  pk11_test.cc  session.cc  session.h  sign.cc  sign_test.cc  test_util.h  tspiwrap.cc  tspiwrap.h  verify.cc  verify_test.cc  wrap_main.cc
testdata/: broken.key  correct.key  pk11.abskeyfile.config  pk11.badkeyfile.config  pk11.config  pk11.missingkeyfile.config
testscripts/: all.sh  pin-key.exp  simple-key.exp
